// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 1 places tile [5G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] | 
P2 | $6000 | [12I] [4B] [12F] [4G] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P1 [End Turn]
`;

exports[`Game Play > (2) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [4G] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Tile: [12I] [4B] [12F] [4G] [3E]]
`;

exports[`Game Play > (3) Player 2 places tile [4G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Hotel: A C F I W T L]
`;

exports[`Game Play > (4) Player 2 starts American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [3E] | A:1
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (5) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5700 | [12I] [4B] [12F] [3E] | A:2
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (6) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5400 | [12I] [4B] [12F] [3E] | A:3
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (7) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] | A:4
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [End Turn]
`;

exports[`Game Play > (8) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Tile: [11I] [6C] [10G] [8G] [6I]]
`;

exports[`Game Play > (9) Player 3 places tile [6C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $6000 | [11I] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (10) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] | A:1
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (11) Player 3 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P4 [Choose Tile: [6F] [1F] [9C] [11F] [10B]]
`;

exports[`Game Play > (12) Player 4 places tile [6F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] | 

P4 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (13) Player 4 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Tile: [12A] [8A] [4F] [11D] [7C]]
`;

exports[`Game Play > (14) Player 1 places tile [4F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (15) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $5600 | [12A] [8A] [11D] [7C] | A:1
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (16) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $5200 | [12A] [8A] [11D] [7C] | A:2
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (17) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [End Turn]
`;

exports[`Game Play > (18) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Tile: [12I] [4B] [12F] [3E] [4D]]
`;

exports[`Game Play > (19) Player 2 places tile [4D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (20) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (21) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Tile: [11I] [10G] [8G] [6I] [10H]]
`;

exports[`Game Play > (22) Player 3 places tile [10H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (23) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5300 | [11I] [10G] [8G] [6I] | A:2
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (24) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4900 | [11I] [10G] [8G] [6I] | A:3
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (25) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] | A:4
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [End Turn]
`;

exports[`Game Play > (26) Player 3 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P4 [Choose Tile: [1F] [9C] [11F] [10B] [8B]]
`;

exports[`Game Play > (27) Player 4 places tile [1F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] | 

P4 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (28) Player 4 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Tile: [12A] [8A] [11D] [7C] [2I]]
`;

exports[`Game Play > (29) Player 1 places tile [8A] 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (30) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4400 | [12A] [11D] [7C] [2I] | A:4
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (31) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4000 | [12A] [11D] [7C] [2I] | A:5
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (32) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] | A:6
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [End Turn]
`;

exports[`Game Play > (33) Player 1 ends turn 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [Choose Tile: [12I] [4B] [12F] [3E] [3C]]
`;

exports[`Game Play > (34) Player 2 places tile [3C] 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $4700 | [12I] [4B] [12F] [3E] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (35) Player 2 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $4300 | [12I] [4B] [12F] [3E] | A:6
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (36) Player 2 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3900 | [12I] [4B] [12F] [3E] | A:7
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (37) Player 2 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] | A:8
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [End Turn]
`;

exports[`Game Play > (38) Player 2 ends turn 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [Choose Tile: [11I] [10G] [8G] [6I] [2G]]
`;

exports[`Game Play > (39) Player 3 places tile [10G] 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - 0 - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $4500 | [11I] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [Choose Hotel: C F I W T L]
`;

exports[`Game Play > (40) Player 3 starts Festival 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $4500 | [11I] [8G] [6I] [2G] | A:4 F:1
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (41) Player 3 purchases Festival 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $4200 | [11I] [8G] [6I] [2G] | A:4 F:2
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (42) Player 3 purchases Festival 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3900 | [11I] [8G] [6I] [2G] | A:4 F:3
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (43) Player 3 purchases Festival 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] | A:4 F:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P3 [End Turn]
`;

exports[`Game Play > (44) Player 3 ends turn 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P4 [Choose Tile: [9C] [11F] [10B] [8B] [7B]]
`;

exports[`Game Play > (45) Player 4 places tile [8B] 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - 0 - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $6000 | [9C] [11F] [10B] [7B] | 

P4 [Choose Hotel: C I W T L]
`;

exports[`Game Play > (46) Player 4 starts Tower 1`] = `
 - - - - - - - T - - - -
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $6000 | [9C] [11F] [10B] [7B] | T:1

P4 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (47) Player 4 purchases Tower 1`] = `
 - - - - - - - T - - - -
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5800 | [9C] [11F] [10B] [7B] | T:2

P4 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (48) Player 4 purchases Tower 1`] = `
 - - - - - - - T - - - -
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5600 | [9C] [11F] [10B] [7B] | T:3

P4 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (49) Player 4 purchases Tower 1`] = `
 - - - - - - - T - - - -
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] | T:4

P4 [End Turn]
`;

exports[`Game Play > (50) Player 4 ends turn 1`] = `
 - - - - - - - T - - - -
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P1 [Choose Tile: [12A] [11D] [7C] [2I] [10A]]
`;

exports[`Game Play > (51) Player 1 places tile [12A] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3600 | [11D] [7C] [2I] [10A] | A:6
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P1 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (52) Player 1 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $3200 | [11D] [7C] [2I] [10A] | A:7
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P1 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (53) Player 1 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2800 | [11D] [7C] [2I] [10A] | A:8
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P1 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (54) Player 1 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] | A:9
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P1 [End Turn]
`;

exports[`Game Play > (55) Player 1 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $3500 | [12I] [4B] [12F] [3E] [8C] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P2 [Choose Tile: [12I] [4B] [12F] [3E] [8C]]
`;

exports[`Game Play > (56) Player 2 places tile [8C] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $3500 | [12I] [4B] [12F] [3E] | A:8
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P2 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (57) Player 2 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $3100 | [12I] [4B] [12F] [3E] | A:9
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P2 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (58) Player 2 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2700 | [12I] [4B] [12F] [3E] | A:10
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P2 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (59) Player 2 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] | A:11
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P2 [End Turn]
`;

exports[`Game Play > (60) Player 2 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $3600 | [11I] [8G] [6I] [2G] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P3 [Choose Tile: [11I] [8G] [6I] [2G] [2H]]
`;

exports[`Game Play > (61) Player 3 places tile [2G] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $3600 | [11I] [8G] [6I] [2H] | A:4 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P3 [Choose Shares: A F T] [End Turn]
`;

exports[`Game Play > (62) Player 3 purchases American 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $3200 | [11I] [8G] [6I] [2H] | A:5 F:4
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P3 [Choose Shares: F T] [End Turn]
`;

exports[`Game Play > (63) Player 3 purchases Tower 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2900 | [11I] [8G] [6I] [2H] | A:5 F:4 T:1
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P3 [Choose Shares: F T] [End Turn]
`;

exports[`Game Play > (64) Player 3 purchases Tower 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] | A:5 F:4 T:2
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P3 [End Turn]
`;

exports[`Game Play > (65) Player 3 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - - T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $5400 | [9C] [11F] [10B] [7B] [4I] | T:4

P4 [Choose Tile: [9C] [11F] [10B] [7B] [4I]]
`;

exports[`Game Play > (66) Player 4 places tile [7B] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $5400 | [9C] [11F] [10B] [4I] | T:4

P4 [Choose Shares: F T] [End Turn]
`;

exports[`Game Play > (67) Player 4 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $5100 | [9C] [11F] [10B] [4I] | F:1 T:4

P4 [Choose Shares: F T] [End Turn]
`;

exports[`Game Play > (68) Player 4 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4800 | [9C] [11F] [10B] [4I] | F:2 T:4

P4 [Choose Shares: F T] [End Turn]
`;

exports[`Game Play > (69) Player 4 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] | F:3 T:4

P4 [End Turn]
`;

exports[`Game Play > (70) Player 4 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] [1E] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [Choose Tile: [11D] [7C] [2I] [10A] [1E]]
`;

exports[`Game Play > (71) Player 1 places tile [1E] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 0 - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] | A:9
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [Choose Hotel: C I W L]
`;

exports[`Game Play > (72) Player 1 starts Worldwide 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2400 | [11D] [7C] [2I] [10A] | A:9 W:1
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (73) Player 1 purchases Worldwide 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $2100 | [11D] [7C] [2I] [10A] | A:9 W:2
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (74) Player 1 purchases Worldwide 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1800 | [11D] [7C] [2I] [10A] | A:9 W:3
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (75) Player 1 purchases Worldwide 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] | A:9 W:4
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P1 [End Turn]
`;

exports[`Game Play > (76) Player 1 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - - - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $2300 | [12I] [4B] [12F] [3E] [10C] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P2 [Choose Tile: [12I] [4B] [12F] [3E] [10C]]
`;

exports[`Game Play > (77) Player 2 places tile [10C] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $2300 | [12I] [4B] [12F] [3E] | A:11
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P2 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (78) Player 2 purchases Worldwide 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $2000 | [12I] [4B] [12F] [3E] | A:11 W:1
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P2 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (79) Player 2 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1700 | [12I] [4B] [12F] [3E] | A:11 F:1 W:1
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P2 [Choose Shares: F W T] [End Turn]
`;

exports[`Game Play > (80) Player 2 purchases Tower 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] | A:11 F:1 T:1 W:1
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P2 [End Turn]
`;

exports[`Game Play > (81) Player 2 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - - - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $2600 | [11I] [8G] [6I] [2H] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [Choose Tile: [11I] [8G] [6I] [2H] [5A]]
`;

exports[`Game Play > (82) Player 3 places tile [2H] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - 0 - A A - - - - F - -
 - 0 - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $2600 | [11I] [8G] [6I] [5A] | A:5 F:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [Choose Hotel: C I L]
`;

exports[`Game Play > (83) Player 3 starts Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $2600 | [11I] [8G] [6I] [5A] | A:5 F:4 I:1 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (84) Player 3 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $2200 | [11I] [8G] [6I] [5A] | A:5 F:4 I:2 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (85) Player 3 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1800 | [11I] [8G] [6I] [5A] | A:5 F:4 I:3 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (86) Player 3 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P3 [End Turn]
`;

exports[`Game Play > (87) Player 3 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - - -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] [11E] | F:3 T:4

P4 [Choose Tile: [9C] [11F] [10B] [4I] [11E]]
`;

exports[`Game Play > (88) Player 4 places tile [11E] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $4500 | [9C] [11F] [10B] [4I] | F:3 T:4

P4 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (89) Player 4 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $4100 | [9C] [11F] [10B] [4I] | F:3 I:1 T:4

P4 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (90) Player 4 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3700 | [9C] [11F] [10B] [4I] | F:3 I:2 T:4

P4 [Choose Shares: F I W T] [End Turn]
`;

exports[`Game Play > (91) Player 4 purchases Imperial 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] | F:3 I:3 T:4

P4 [End Turn]
`;

exports[`Game Play > (92) Player 4 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - - -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [11D] [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [Choose Tile: [11D] [7C] [2I] [10A] [4H]]
`;

exports[`Game Play > (93) Player 1 places tile [11D] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - 0 -
 W - - - - - - - - - 0 -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [7C] [2I] [10A] [4H] | A:9 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [Choose Hotel: C L]
`;

exports[`Game Play > (94) Player 1 starts Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - - - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1500 | [7C] [2I] [10A] [4H] | A:9 C:1 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (95) Player 1 purchases Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - - - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $1100 | [7C] [2I] [10A] [4H] | A:9 C:2 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (96) Player 1 purchases Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - - - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $700 | [7C] [2I] [10A] [4H] | A:9 C:3 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (97) Player 1 purchases Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - - - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] | A:9 C:4 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P1 [End Turn]
`;

exports[`Game Play > (98) Player 1 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - - - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $1300 | [12I] [4B] [12F] [3E] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P2 [Choose Tile: [12I] [4B] [12F] [3E] [7H]]
`;

exports[`Game Play > (99) Player 2 places tile [3E] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $1300 | [12I] [4B] [12F] [7H] | A:11 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P2 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (100) Player 2 purchases Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $900 | [12I] [4B] [12F] [7H] | A:11 C:1 F:1 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P2 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (101) Player 2 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $600 | [12I] [4B] [12F] [7H] | A:11 C:1 F:2 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P2 [Choose Shares: C F I W T] [End Turn]
`;

exports[`Game Play > (102) Player 2 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] | A:11 C:1 F:3 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P2 [End Turn]
`;

exports[`Game Play > (103) Player 2 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 - - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] [4C] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [Choose Tile: [11I] [8G] [6I] [5A] [4C]]
`;

exports[`Game Play > (104) Player 3 places tile [4C] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - 0 0 - 0 - T - 0 - -
 - - - 0 - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [Choose Hotel: L]
`;

exports[`Game Play > (105) Player 3 starts Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $1400 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 L:1 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (106) Player 3 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $1100 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 L:2 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (107) Player 3 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $800 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 L:3 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (108) Player 3 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] | A:5 F:4 I:4 L:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P3 [End Turn]
`;

exports[`Game Play > (109) Player 3 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - - - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $3300 | [9C] [11F] [10B] [4I] [6D] | F:3 I:3 T:4

P4 [Choose Tile: [9C] [11F] [4I] (unavailable: [10B] [6D])]
`;

exports[`Game Play > (110) Player 4 places tile [4I] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $3300 | [9C] [11F] [10B] [6D] | F:3 I:3 T:4

P4 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (111) Player 4 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $3000 | [9C] [11F] [10B] [6D] | F:3 I:3 L:1 T:4

P4 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (112) Player 4 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2700 | [9C] [11F] [10B] [6D] | F:3 I:3 L:2 T:4

P4 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (113) Player 4 purchases Luxor 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] | F:3 I:3 L:3 T:4

P4 [End Turn]
`;

exports[`Game Play > (114) Player 4 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - 0 - T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [7C] [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P1 [Choose Tile: [7C] [2I] [10A] [4H] [9B]]
`;

exports[`Game Play > (115) Player 1 places tile [7C] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $300 | [2I] [10A] [4H] [9B] | A:9 C:4 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P1 [Choose Shares: F W L] [End Turn]
`;

exports[`Game Play > (116) Player 1 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] | A:9 C:4 F:1 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P1 [End Turn]
`;

exports[`Game Play > (117) Player 1 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - 0 - - - - - -
 - I - A A - - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $300 | [12I] [4B] [12F] [7H] [6G] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P2 [Choose Tile: [12I] [4B] [12F] [7H] [6G]]
`;

exports[`Game Play > (118) Player 2 places tile [6G] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $300 | [12I] [4B] [12F] [7H] | A:11 C:1 F:3 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P2 [Choose Shares: F W L] [End Turn]
`;

exports[`Game Play > (119) Player 2 purchases Festival 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] | A:11 C:1 F:4 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P2 [End Turn]
`;

exports[`Game Play > (120) Player 2 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - - - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $500 | [11I] [8G] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P3 [Choose Tile: [11I] [8G] [6I] [5A] [1B]]
`;

exports[`Game Play > (121) Player 3 places tile [8G] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - 0 - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $500 | [11I] [6I] [5A] [1B] | A:5 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P3 [Choose Shares: C F I W L] [End Turn]
`;

exports[`Game Play > (122) Player 3 purchases Continental 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - 0 - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P3 [End Turn]
`;

exports[`Game Play > (123) Player 3 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - - -
 - I - A A A - 0 - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [11F] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P4 [Choose Tile: [9C] [11F] [6D] [11H] (unavailable: [10B])]
`;

exports[`Game Play > (124) Player 4 places tile [11F] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] | F:3 I:3 L:3 T:4

P4 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (125) Player 4 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - - - - - - - F - -
 - - - 0 - - - - - - - -

P1 | $0 | [2I] [10A] [4H] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P1 [Choose Tile: [2I] [10A] [4H] [9B] [2A]]
`;

exports[`Game Play > (126) Player 1 places tile [4H] 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - - - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P1 [End Turn]
`;

exports[`Game Play > (127) Player 1 ends turn 1`] = `
 - - - - - - - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - - - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [6A] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P2 [Choose Tile: [12I] [4B] [12F] [7H] [6A]]
`;

exports[`Game Play > (128) Player 2 places tile [6A] 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - - - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P2 [End Turn]
`;

exports[`Game Play > (129) Player 2 ends turn 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - - - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [6I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P3 [Choose Tile: [11I] [6I] [1B] [7G] (unavailable: [5A])]
`;

exports[`Game Play > (130) Player 3 places tile [6I] 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - 0 - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P3 [End Turn]
`;

exports[`Game Play > (131) Player 3 ends turn 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F - -
 - - - A - 0 - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [11H] [10I] | F:3 I:3 L:3 T:4

P4 [Choose Tile: [9C] [6D] [11H] [10I] (unavailable: [10B])]
`;

exports[`Game Play > (132) Player 4 places tile [11H] 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F F -
 - - - A - 0 - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [10I] | F:3 I:3 L:3 T:4

P4 [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (133) Player 4 ends turn 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F F -
 - - - A - 0 - - - - - -

P1 | $0 | [2I] [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [10I] [12G] | F:3 I:3 L:3 T:4

P1 [Choose Tile: [2I] [10A] [9B] [2A] (unavailable: [8H])]
`;

exports[`Game Play > (134) Player 1 places tile [2I] 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F F -
 - I - A - 0 - - - - - -

P1 | $0 | [10A] [9B] [2A] [8H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [10I] [12G] | F:3 I:3 L:3 T:4

P1 [End Turn]
`;

exports[`Game Play > (135) Player 1 ends turn 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - I - A A A - 0 - F - -
 - I - A - - - - - F F -
 - I - A - 0 - - - - - -

P1 | $0 | [10A] [9B] [2A] [8H] [6H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] [3G] | A:11 C:1 F:4 T:1 W:1
P3 | $100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $2400 | [9C] [10B] [6D] [10I] [12G] | F:3 I:3 L:3 T:4

P2 [Choose Tile: [12I] [4B] [12F] [7H] [3G]]
`;

exports[`Game Play > (136) Player 2 places tile [3G] 1`] = `
 - - - - - 0 - T - - - 0
 - - - - - - T T - - - -
 - - L L - T T T - 0 - -
 - - - L - - - - - - C -
 W - 0 - - - - - - - C -
 W - - A - A - - - - C -
 - A A A A A - 0 - F - -
 - A - A - - - - - F F -
 - A - A - 0 - - - - - -

P1 | $0 | [10A] [9B] [2A] [8H] [6H] | A:9 C:4 F:1 W:4
P2 | $0 | [12I] [4B] [12F] [7H] | A:11 C:1 F:4 T:1 W:1
P3 | $5100 | [11I] [5A] [1B] [7G] [5F] | A:5 C:1 F:4 I:4 L:4 T:2
P4 | $4900 | [9C] [10B] [6D] [10I] [12G] | F:3 I:3 L:3 T:4

P3 [Sell (1/4) Imperial Share] [Keep (1/4) Imperial Share]
`;
